# catastro-dimensional-modeling

./: README.md  docker-compose.yml  pyproject.toml
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_cleaning.yml  data_modeling.yml
conf/local/: credentials.yml
docs/source/: conf.py  index.rst
src/: setup.py
src/dimensional_modeling/: __init__.py  __main__.py  settings.py
src/dimensional_modeling/pipelines/data_cleaning/: README.md  __init__.py  nodes.py  pipeline.py
src/dimensional_modeling/pipelines/data_ingestion/: nodes.py  pipeline.py
src/dimensional_modeling/pipelines/data_modeling/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/data_cleaning/: test_pipeline.py
src/tests/pipelines/data_modeling/: test_pipeline.py
