[tool.kedro]
package_name = "dimensional_modeling"
project_name = "dimensional-modeling"
kedro_init_version = "0.18.7"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/dimensional_modeling -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "catastro-dimensional-modeling"
version = "0.1.0"
description = ""
authors = ["cdanmontoya <cdanmontoya@experimentality.co>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kedro = "^0.18.7"
kedro-viz = "^6.0.1"
jupyter = "^1.0.0"
black = "^23.3.0"
jupyterlab = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
